<resources>
    <string name="app_name">FYP</string>
    <string name="google_API">AIzaSyAw_bL96m9ni55l7V30TYSEKp39FufxCkM"</string>
    <string name="filter">Select Parking Lot Types</string>
    <string name="header">Parking Lot Finder</string>
    <string name="smallheader">Help to improve the service by contributing!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>
    <string name="collection_parking_details">Parking Details</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>


    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>

    <string name="a1">1&#8211;3</string>
    <string name="b2">4&#8211;10</string>
    <string name="c3">11&#8211;50</string>
    <string name="d4">51&#8211;100</string>
    <string name="e5">100+</string>

    <string-array name="numbers">
        <item>@string/a1</item>
        <item>@string/b2</item>
        <item>@string/c3</item>
        <item>@string/d4</item>
        <item>@string/e5</item>

</string-array>

    <string name="Shaded">&#x0020;&#32;Shaded Parking</string>
    <string name="Free">&#x0020;Free Parking </string>
    <string name="Paid">&#x0020;Paid Parking </string>
    <string name="Multistorey">&#x0020;Multistorey Parking </string>
    <string name="Disabled">&#x0020;Disabled Parking </string>
    <string name="Electric">&#x0020;Electric Parking </string>

    <string-array name="title">
        <item>Shaded Parking</item>
        <item>Free Parking</item>
        <item>Paid Parking</item>
        <item>Multistorey Parking</item>
        <item>Disabled Parking</item>
        <item>Electric vehicle Parking</item>
    </string-array>

    <array name="icons">
        <item>@drawable/ic_shaded</item>
        <item>@drawable/ic_findcar</item>
        <item>@drawable/ic_paidparking</item>
        <item>@drawable/ic_multistorey</item>
        <item>@drawable/ic_disabled</item>
        <item>@drawable/ic_ev</item>

    </array>


</resources>
