<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">



     <item android:title="Filter"
         android:icon="@drawable/ic_filter">

 <menu android:id="@+id/checkboxmenu">

    <!-- <item
         android:id="@+id/shadedcheck"
         app:actionLayout="@layout/widget_check"
         android:title="@string/Shaded"
         tools:ignore="MenuTitle"
         android:checkable="true"
         android:icon="@drawable/ic_shaded"/>-->
     <item
         android:id="@+id/freecheck"
         app:actionLayout="@layout/widget_checkfree"
         android:title="@string/Free"
         tools:ignore="MenuTitle"
         android:icon="@drawable/ic_findcar"/>
     <item
         android:id="@+id/paidcheck"
         app:actionLayout="@layout/widget_checkpaid"
         android:title="@string/Paid"
         tools:ignore="MenuTitle"
         android:icon="@drawable/ic_paidparking"/>
     <item
         android:id="@+id/multistoreycheck"
         app:actionLayout="@layout/widget_checkmultistorey"
         android:title="@string/Multistorey"
         tools:ignore="MenuTitle"
         android:icon="@drawable/ic_multistorey"/>
     <item
         android:id="@+id/disabledcheck"
         app:actionLayout="@layout/widget_checkdisabled"
         android:title="@string/Disabled"
         tools:ignore="MenuTitle"
         android:icon="@drawable/ic_disabled"/>
     <item
         android:id="@+id/electriccheck"
         app:actionLayout="@layout/widget_checkelectric"
         android:title="@string/Electric"
         tools:ignore="MenuTitle"
         android:icon="@drawable/ic_ev"/>


   <!-- <item android:id="@+id/shaded"
        android:icon="@drawable/ic_shaded"
        android:title="Shaded Parking"
        android:checkable="true"
        android:visible="true"
        app:showAsAction="never"
        android:orderInCategory="200"/>

    <item android:id="@+id/free"
        android:icon="@drawable/ic_findcar"
        android:title="Free parking" />

    <item android:id="@+id/paidparking"
        android:icon="@drawable/ic_paidparking"
        android:title="Paid Parking" />

    <item android:id="@+id/multistorey"
        android:icon="@drawable/ic_multistorey"
        android:title="Multistorey car park" />

    <item android:id="@+id/disabled"
        android:icon="@drawable/ic_disabled"
        android:title="Disabled parking" />

    <item android:id="@+id/ev"
        android:icon="@drawable/ic_ev"
        android:title="Electric Vehicles" />-->
         </menu>
     </item>

<group>
    <item android:title="Other features">
        <menu>
    <item android:id="@+id/parkingfine"
        android:icon="@drawable/ic_parkingfine"
        android:title="Pay Parking Fines" />

    <item android:id="@+id/findcar"
        android:icon="@drawable/ic_findcar"
        android:title="Find Car Location" />
        </menu>
    </item>
</group>
    <item android:title="Entry">
<menu>

    <item android:id="@+id/register"
        android:icon="@drawable/ic_signup"
        android:title="Register" />

    <item android:id="@+id/login"
        android:icon="@drawable/ic_login"
        android:title="Login" />

    <item android:id="@+id/signout"
        android:icon="@drawable/ic_signup"
        android:title="Logout"/>
</menu>
    </item>

</menu>